--- a/01-frontend/app/src/index.html
+++ b/01-frontend/app/src/index.html
@@ -3,19 +3,19 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Sioeuzal Frontend</title>
+    <title><Louise-Souza></Louise-Souza> Frontend</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
       <nav>
-        <h1 class="logo">Sioeuzal</h1>
+        <h1 class="logo">Louise-Souza</h1>
       </nav>
     </header>
 
     <section class="hero">
       <div class="hero-content">
-        <h2>Bem-vindo(a) ao Sioeuzal</h2>
+        <h2>Bem-vindo(a) ao Louise-Souza</h2>
         <p>
           Frontend estático hospedado na AWS (S3 + CloudFront) via Terraform.
         </p>
@@ -26,7 +26,7 @@
 
     <footer>
       <p>
-        &copy; <span id="ano"></span> Sioeuzal. Todos os direitos reservados.
+        &copy; <span id="ano"></span> Louise-Souza. Todos os direitos reservados.
       </p>
     </footer>
 
